complete a thread unsafe mempool library with low performance

--- a/mempool/.vscode/settings.json
+++ b/mempool/.vscode/settings.json
@@ -13,6 +13,9 @@
         "string": "cpp",
         "queue": "cpp",
         "atomic": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "bitset": "cpp",
+        "__bit_reference": "cpp",
+        "ios": "cpp"
     }
 }
