add memory align for mempool

--- a/mempool/.vscode/settings.json
+++ b/mempool/.vscode/settings.json
@@ -17,6 +17,8 @@
         "bitset": "cpp",
         "__bit_reference": "cpp",
         "ios": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "cmath": "cpp",
+        "memory": "cpp"
     }
 }
