--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,7 @@
-# Download and unpack googletest at configure time
-configure_file(CMakeLists.txt.in thirdparty/googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/thirdparty/googletest-download )
-if(result)
-  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/thirdparty/googletest-download )
-if(result)
-  message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
+cmake_minimum_required(VERSION 2.8)
 
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+#SET(CMAKE_C_COMPILER "/usr/bin/g++")
+SET(CMAKE_BINARY_DIR .)
 
 # Add googletest directly to our build. This defines
 # the gtest and gtest_main targets.
