--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ compiler:
   - clang
 install:
 - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+- cmake . && make -j && make test
 addons:
   apt:
     sources:
-    - ubuntu-toolchain-r-test
+      - george-edison55-precise-backports
     packages:
-    - gcc-4.8
-    - g++-4.8
-    - clang
+      - cmake-data
+      - cmake
