--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++11")
-include_directories(mempool/src threadpool/src net/src .)
 link_libraries(pthread)
-add_subdirectory(${CMAKE_BINARY_DIR}/thirdparty)
 
+include_directories(.)
+
+add_subdirectory(${CMAKE_BINARY_DIR}/thirdparty)
 add_subdirectory(mempool)
 add_subdirectory(threadpool)
 
