--- a/mempool/CMakeLists.txt
+++ b/mempool/CMakeLists.txt
@@ -1,2 +1,3 @@
+include_directories(src)
 add_executable(output/TestMempool example/TestMempool.cpp)
 target_link_libraries(output/TestMempool gflags)
