adjust the gitignore and CMakeLists.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,45 @@
-CMakeFiles
-cmake-build-debug
 .vscode
 .idea
-thirdparty
+
+output
+Makefile
 CMakeCache.txt
+cmake_install.cmake
+cmake-build-debug
+
+net/output
 net/Makefile
+net/CMakeFiles
 net/cmake_install.cmake
-net/example/
-net/output/
-thirdparty/gflags/gflags.cbp
+net/CMakeCache.txt
+
+thirdparty
+thirdparty/CMakeFiles
+thirdparty/Makefile
+thirdparty/CMakeCache.txt
+thirdparty/cmake_install.cmake
+
+thirdparty/googlemock/CMakeFiles
+thirdparty/googlemock/Makefile
+thirdparty/googlemock/CMakeCache.txt
+thirdparty/googlemock/cmake_install.cmake
+
+thirdparty/googletest/CMakeFiles
+thirdparty/googletest/Makefile
+thirdparty/googletest/CMakeCache.txt
+thirdparty/googletest/cmake_install.cmake
+
+thirdparty/gflags/CMakeFiles
+thirdparty/gflags/Makefile
+thirdparty/gflags/CMakeCache.txt
+thirdparty/gflags/cmake_install.cmake
+
+mempool/output
+mempool/Makefile
+mempool/CMakeFiles
+mempool/cmake_install.cmake
+
+threadpool/output
+threadpool/Makefile
+threadpool/CMakeFiles
+threadpool/cmake_install.cmake
