update pthread for threadpool which could wock well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,18 @@ if(POLICY CMP0037)
 endif()
 
 add_subdirectory(thirdparty)
+
+#set(gflags_DIR thirdparty/gflags)
+#find_package(gflags COMPONENTS nothreads_static)
+
 add_subdirectory(mempool)
 add_subdirectory(threadpool)
-add_subdirectory(net)
+#add_subdirectory(net)
 
 set(dir output)
 file(MAKE_DIRECTORY ${dir})
 file(MAKE_DIRECTORY ${dir}/test)
+
 
 set(EXECUTABLE_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
 set(LIBRARY_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
@@ -24,8 +29,6 @@ set(CMAKE_BUILD_FILES_DIRECTORY ${dir})
 set(CMAKE_BUILD_DIRECTORY ${dir})
 set(CMAKE_BINARY_DIR  ${dir})
 SET(CMAKE_CACHEFILE_DIR ${dir})
-
-
 
 add_executable(test/gtest_test test/test.cpp test/unittest/gtest_test.cpp)
 target_link_libraries(test/gtest_test gtest_main gtest)
