--- a/threadpool/CMakeLists.txt
+++ b/threadpool/CMakeLists.txt
@@ -1,5 +1,7 @@
-include_directories(src)
+link_libraries(pthread)
+include_directories(src ../mempool/src)
 set(dir output)
 file(MAKE_DIRECTORY ${dir})
 file(MAKE_DIRECTORY ${dir}/test)
-add_executable(test/TestThreadpool example/TestThreadpool.cpp)
+add_executable(test/TestThreadpool example/TestThreadpool.cpp src/threadpool.cpp src/task_group.cpp)
+target_link_libraries(test/TestThreadpool gflags)
