--- a/threadpool/CMakeLists.txt
+++ b/threadpool/CMakeLists.txt
@@ -4,4 +4,4 @@ set(dir output)
 file(MAKE_DIRECTORY ${dir})
 file(MAKE_DIRECTORY ${dir}/test)
 add_executable(test/TestThreadpool example/TestThreadpool.cpp src/threadpool.cpp src/task_group.cpp)
-target_link_libraries(test/TestThreadpool gflags)
+target_link_libraries(test/TestThreadpool gflags glog)
