--- a/mempool/CMakeLists.txt
+++ b/mempool/CMakeLists.txt
@@ -3,4 +3,4 @@ set(dir output)
 file(MAKE_DIRECTORY ${dir})
 file(MAKE_DIRECTORY ${dir}/test)
 add_executable(test/TestMempool example/TestMempool.cpp)
-target_link_libraries(test/TestMempool gflags)
+target_link_libraries(test/TestMempool gflags glog)
