--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -5,7 +5,11 @@ file(MAKE_DIRECTORY ${dir}/test)
 file(MAKE_DIRECTORY ${dir}/unittest)
 add_executable(unittest/TEST_ADD src/t.cpp unittest/TEST_ADD.cpp)
 target_link_libraries(unittest/TEST_ADD gtest_main gtest gflags)
-add_test(NAME unittest/poller_test COMMAND unittest/poller_test)
+#add_test(NAME unittest/poller_test COMMAND unittest/poller_test)
+
+add_executable(unittest/TEST_POLL src/event_loop.cpp src/va_epoll.cpp src/default_event_handler.cpp unittest/TEST_POLL.cpp)
+target_link_libraries(unittest/TEST_POLL gtest_main gtest gflags)
+#add_test(NAME unittest/poller_test COMMAND unittest/poller_test)
 
 #target_link_libraries(test/TestMempool gflags)
 
