update and make kqueue code run the simple unittest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,17 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 
 link_libraries(pthread)
 
-include_directories(.)
-
 if(POLICY CMP0037)
     cmake_policy(SET CMP0037 OLD)
 endif()
 
-add_subdirectory(thirdparty)
+#add_subdirectory(thirdparty)
+add_subdirectory( thirdparty/googlemock )
+add_subdirectory( thirdparty/gflags )
+add_subdirectory( thirdparty/glog )
+include_directories(${GFLAGS_INCLUDE_DIR})
+link_libraries(gflags)
 link_libraries(glog)
-#set(gflags_DIR thirdparty/gflags)
-#find_package(gflags COMPONENTS nothreads_static)
 
 set(BOOST_ROOT "thirdparty/boost")
 set(Boost_DEBUG OFF)
@@ -21,6 +22,8 @@ include_directories(${Boost_INCLUDE_DIRS})
 if(Boost_FOUND)
     message(STATUS "Boost_FOUND...")
 endif()
+
+include_directories(.)
 
 add_subdirectory(mempool)
 add_subdirectory(threadpool)
@@ -38,7 +41,3 @@ set(CMAKE_BUILD_FILES_DIRECTORY ${dir})
 set(CMAKE_BUILD_DIRECTORY ${dir})
 set(CMAKE_BINARY_DIR  ${dir})
 SET(CMAKE_CACHEFILE_DIR ${dir})
-
-add_executable(test/gtest_test test/test.cpp test/unittest/gtest_test.cpp net/unittest/TEST_POLL.cpp)
-target_link_libraries(test/gtest_test gtest_main gtest)
-add_test(NAME test/gtest_test COMMAND test/gtest_test)
