--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -1,18 +1,14 @@
-include_directories(src)
+include_directories(src .)
 set(dir output)
 file(MAKE_DIRECTORY ${dir})
 file(MAKE_DIRECTORY ${dir}/test)
 file(MAKE_DIRECTORY ${dir}/unittest)
-add_executable(unittest/TEST_ADD src/t.cpp unittest/TEST_ADD.cpp)
-target_link_libraries(unittest/TEST_ADD gtest_main gtest gflags)
-#add_test(NAME unittest/poller_test COMMAND unittest/poller_test)
 
-add_executable(unittest/TEST_POLL src/event_loop.cpp src/va_epoll.cpp src/default_event_handler.cpp unittest/TEST_POLL.cpp)
+add_executable(unittest/TEST_POLL
+        src/default_event_handler.cpp
+        src/socket_manager.cpp
+        src/event_loop.cpp
+        unittest/TEST_POLL.cpp
+        )
 target_link_libraries(unittest/TEST_POLL gtest_main gtest gflags)
-#add_test(NAME unittest/poller_test COMMAND unittest/poller_test)
-
-#target_link_libraries(test/TestMempool gflags)
-
-#add_executable(output/unittest/poller_test src/poller.cpp unittest/poller_test.cpp)
-#target_link_libraries(output/unittest/poller_test gtest_main gtest)
-#add_test(NAME output/unittest/poller_test COMMAND output/unittest/poller_test)
+add_test(NAME unittest/TEST_POLL COMMAND unittest/TEST_POLL)
