add policy inteface, add event loop global sigletom.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,13 @@ include_directories(${GFLAGS_INCLUDE_DIR})
 link_libraries(gflags)
 link_libraries(glog)
 
-set(BOOST_ROOT "thirdparty/boost")
-set(Boost_DEBUG OFF)
-find_package(Boost COMPONENTS system filesystem REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
-if(Boost_FOUND)
-    message(STATUS "Boost_FOUND...")
-endif()
+#set(BOOST_ROOT "thirdparty/boost")
+#set(Boost_DEBUG OFF)
+#find_package(Boost COMPONENTS system filesystem REQUIRED)
+#include_directories(${Boost_INCLUDE_DIRS})
+#if(Boost_FOUND)
+#    message(STATUS "Boost_FOUND...")
+#endif()
 
 include_directories(.)
 
